<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_titulo"
        android:layout_width="336dp"
        android:layout_height="37dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/formulario_de_productos"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edt_idproductos"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/identifiador_de_productos"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/txt_titulo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_titulo"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/edt_nombre"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/nombre_del_cliente"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/edt_idproductos"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_idproductos"
        app:layout_constraintTop_toBottomOf="@+id/edt_idproductos"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/edt_direccion"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/direccion_de_envio"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:maxLength="50"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/edt_nombre"
        app:layout_constraintStart_toStartOf="@+id/edt_nombre"
        app:layout_constraintTop_toBottomOf="@+id/edt_nombre"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edt_telefono"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/telefono"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/edt_direccion"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_direccion"
        app:layout_constraintTop_toBottomOf="@+id/edt_direccion"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginTop="28dp"
        android:text="@string/metodo_de_envio"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/edt_telefono"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_telefono"
        app:layout_constraintTop_toBottomOf="@+id/edt_telefono"
        tools:ignore="TextContrastCheck" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="146dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enivo_urgente_5"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/enivo_normal_4"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/enivo_lento_3"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TextContrastCheck" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_siguente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:text="@string/siguente"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>